--- a/.github/workflows/start.yml
+++ b/.github/workflows/start.yml
@@ -30,6 +30,7 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          git clone https://git.codecrafters.io/4cb9d96a27ea6c6c .
+          git clone https://git.codecrafters.io/4cb9d96a27ea6c6c codecrafters-shell-python
+          cd codecrafters-shell-python
           git commit --allow-empty -m 'test'
           git push origin main
